# commit-summary

./: .env.example  .gitignore  INSTALL.md  README.md  pyproject.toml  test_scraper.py
output/: test_results.json
src/: debug_douyin.py  douyin_api.py  douyin_pro.py
src/tiktok_comment_scraper/: __init__.py  cli.py
src/tiktok_comment_scraper/config/: settings.py
src/tiktok_comment_scraper/llm/: __init__.py  client.py
src/tiktok_comment_scraper/models/: __init__.py  comment.py
src/tiktok_comment_scraper/scraper/: __init__.py  tiktok.py
tests/unit/: test_llm_client.py  test_models.py  test_scraper.py  test_settings.py
